Refactor code in function names

--- a/cronometro.html
+++ b/cronometro.html
@@ -15,16 +15,16 @@
                     </div>
 
                     <div class="keynumber">
-                        <input type="button"  class="numero ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(0);" value="0" />
-                        <input type="button"  class="numero ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(1);" value="1" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(2);" value="2" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(3);" value="3" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(4);" value="4" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(5);" value="5" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(6);" value="6" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(7);" value="7" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(8);" value="8" />
-                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pulsar(9);" value="9" />
+                        <input type="button"  class="numero ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(0);" value="0" />
+                        <input type="button"  class="numero ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(1);" value="1" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(2);" value="2" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(3);" value="3" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(4);" value="4" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(5);" value="5" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(6);" value="6" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(7);" value="7" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(8);" value="8" />
+                        <input type="button"  class="numero ui-button ui-widget numero ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:pressKeyNumber(9);" value="9" />
                     </div>
                     <div id="control">
                         <div id="control_set">
@@ -32,10 +32,10 @@
                             <input type="button" id="reset" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:reset();" value="Reset" />
                         </div>
                         <div id="control_init">
-                            <input type="button" id="iniciar" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:iniciar();" value="Iniciar" />
+                            <input type="button" id="init" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:iniciar();" value="Iniciar" />
                             <input type="button" id="parar" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:parar();" value="Parar" />
                             <input type="button" id="reiniciar" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:reiniciar();" value="Reiniciar" />
-                            <input type="button" id="cambiar" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:cambiar();" value="Cambiar" />
+                            <input type="button" id="change" class="control ui-button ui-widget ui-state-default ui-button-text-only ui-corner-all" onclick="javascript:cambiar();" value="Cambiar" />
                         </div>
                     </div>
                 </div>
